start of installation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 8000:80
     volumes:
-      - ./public/:/var/www/html 
+      - ./:/var/www/html 
     build:
       context: .
       dockerfile: Dockerfile
