--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,7 @@
             "App\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.10"
+    }
 }
