--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     },
     "require": {
         "phpmailer/phpmailer": "^6.10",
-        "mongodb/mongodb": "^2.1"
+        "mongodb/mongodb": "^2.1",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
