--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   php:
     image: php:8.2-apache
     container_name: phpApacheEcoride
+    environment:
+      - MONGODB_URI=${MONGODB_URI}
     ports:
       - 8000:80
     volumes:
@@ -33,28 +35,7 @@ services:
       PMA_PASSWORD: ${db_password}
     ports:
       - 8899:80
-
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    ports:
-      - "27017:27017"
-    volumes:
-      - mongo_data:/data/db
-    restart: always
-
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=${mongo_server}
-      - ME_CONFIG_BASICAUTH_USERNAME=${mongo_username}
-      - ME_CONFIG_BASICAUTH_PASSWORD=${mongo_password}
-
-
+      
 volumes:
   db_data:
   mongo_data:
