--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
     container_name: phpApacheEcoride
     environment:
       - MONGODB_URI=${MONGODB_URI}
+      - db_host=${db_host}
+      - db_name=${db_name}
+      - db_user=${db_user}
+      - db_password=${db_password}
     ports:
       - 8000:80
     volumes:
@@ -13,6 +17,9 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - db
+    networks:
+      - ecoride-net
+
   db:
     image: mysql:8.0
     container_name: mysqlEcoride
@@ -25,6 +32,9 @@ services:
       - 3307:3306
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - ecoride-net
+
   phpma:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadminEcoride
@@ -35,7 +45,14 @@ services:
       PMA_PASSWORD: ${db_password}
     ports:
       - 8899:80
+    networks:
+      - ecoride-net
       
 volumes:
   db_data:
   mongo_data:
+
+networks:
+  ecoride-net:
+    name: ecoride-net
+    driver: bridge
